--- a/editable.html
+++ b/editable.html
@@ -151,7 +151,7 @@
             </div><div data-silex-id="silex-id-1432759238054-9" data-silex-type="container-element" class="editable-style container-element silex-id-1432759238054-9 pic button">
 
 
-                <a data-silex-id="silex-id-1432759237951-8" data-silex-type="container-element" class="editable-style container-element fancybox silex-id-1432759237951-8" title="The caption is set in the &quot;title and tooltip&quot; property in Silex" href="assets/sea3-big.jpeg">
+                <a data-silex-id="silex-id-1432759237951-8" data-silex-type="container-element" class="editable-style container-element fancybox silex-id-1432759237951-8" title="The caption is set in the &quot;title and tooltip&quot; property in Silex" href="assets/20220908_114326%20(1).jpg">
                 </a>
 
                 <div data-silex-id="silex-id-1432759237849-7" data-silex-type="text-element" class="editable-style text-element full-width silex-id-1432759237849-7">
