--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body class="all-style enable-mobile prevent-resizable prevent-selectable editable-style body-initial silex-runtime silex-published" data-current-page="page-home"><section class="container-element editable-style silex-id-1541607542031-10 section-element prevent-resizable"><div class="editable-style silex-id-1541607542028-9 container-element silex-element-content website-width hero"><div class="editable-style image-element silex-id-1432759239575-24 avatar">
             <img class="" src="assets/avatar.jpg" alt="avatar">
         </div><div class="editable-style text-element silex-id-1432759240091-29 text-shadow">
-            <div class="silex-element-content normal"><h1>Cras euismod hendrerit lacus, sed ultricies lectus sagittis non. </h1><h1>Aenean a justo vel metus aliquet convallis sit amet in augue. </h1></div>
+            <div class="silex-element-content normal"><h1>This is Kaila's website.</h1></div>
         </div></div></section><section class="container-element editable-style silex-id-1541607497060-8 section-element prevent-resizable"><div class="editable-style silex-id-1541607497057-7 container-element silex-element-content website-width"><div class="editable-style text-element silex-id-1432759239878-27">
                 <div class="silex-element-content normal">
                     <h2>Ipsum lorem dolor aliquam ante commodo magna sed accumsan arcu neque.</h2>
@@ -133,7 +133,7 @@
             </div><div class="editable-style container-element silex-id-1432759238054-9 pic button">
 
 
-                <a class="editable-style container-element fancybox silex-id-1432759237951-8" title="The caption is set in the &quot;title and tooltip&quot; property in Silex" href="assets/sea3-big.jpeg">
+                <a class="editable-style container-element fancybox silex-id-1432759237951-8" title="The caption is set in the &quot;title and tooltip&quot; property in Silex" href="assets/20220908_114326%20(1).jpg">
                 </a>
 
                 <div class="editable-style text-element full-width silex-id-1432759237849-7">
