--- a/editable.html
+++ b/editable.html
@@ -151,7 +151,7 @@
             </div><div data-silex-id="silex-id-1432759238054-9" data-silex-type="container-element" class="editable-style container-element silex-id-1432759238054-9 pic button">
 
 
-                <a data-silex-id="silex-id-1432759237951-8" data-silex-type="container-element" class="editable-style container-element fancybox silex-id-1432759237951-8" title="The caption is set in the &quot;title and tooltip&quot; property in Silex" href="assets/20220908_114326%20(1).jpg">
+                <a data-silex-id="silex-id-1432759237951-8" data-silex-type="container-element" class="editable-style container-element fancybox silex-id-1432759237951-8" title="The caption is set in the &quot;title and tooltip&quot; property in Silex" href="assets/longneck.jpg">
                 </a>
 
                 <div data-silex-id="silex-id-1432759237849-7" data-silex-type="text-element" class="editable-style text-element full-width silex-id-1432759237849-7">
@@ -201,7 +201,7 @@
             <div class="silex-element-content normal">
                 <h2>Get In Touch<br></h2>
             </div>
-        </div><div data-silex-type="html-element" class="editable-style silex-id-1541607116447-4 html-element silex-component silex-component-form silex-use-height-not-minheight" data-silex-id="silex-id-1541607116447-4"><div class="silex-element-content"><form id="id_1663376689995_419" action="https://formspree.io/your@email.com" method="POST">
+        </div><div data-silex-type="html-element" class="editable-style silex-id-1541607116447-4 html-element silex-component silex-component-form silex-use-height-not-minheight" data-silex-id="silex-id-1541607116447-4"><div class="silex-element-content"><form id="id_1663378852178_218" action="https://formspree.io/your@email.com" method="POST">
   
   <div>
     <label for="field1">Name</label>
@@ -222,7 +222,7 @@
   
   <input type="submit" value="Send">
 </form>
-<style>#id_1663376689995_419 input[type=text], select {width: 100%; padding: 12px 20px; margin: 8px 0; display: inline-block; border: 1px solid #ccc; border-radius: 3px; box-sizing: border-box;}#id_1663376689995_419 input[type=submit] {width: 100%; background-color: #ffffff; color: #ce8547; padding: 14px 20px; margin: 8px 0; border: 1px solid #ce8547; border-radius: 3px; cursor: pointer;}#id_1663376689995_419 label {color: #999999;}#id_1663376689995_419 .fill-vertical {flex: 1 1 auto; display: flex; flex-direction: column;}#id_1663376689995_419 .fill-vertical textarea {flex: 1 1 auto; width: 100%; height: 150px; padding: 12px 20px; box-sizing: border-box; border: 2px solid #ccc; border-radius: 3px; background-color: #f8f8f8; font-size: 16px; resize: none;}#id_1663376689995_419 {border-radius: 3px; display: flex; flex-direction: column; justify-content: space-between; height: 100%;}</style>
+<style>#id_1663378852178_218 input[type=text], select {width: 100%; padding: 12px 20px; margin: 8px 0; display: inline-block; border: 1px solid #ccc; border-radius: 3px; box-sizing: border-box;}#id_1663378852178_218 input[type=submit] {width: 100%; background-color: #ffffff; color: #ce8547; padding: 14px 20px; margin: 8px 0; border: 1px solid #ce8547; border-radius: 3px; cursor: pointer;}#id_1663378852178_218 label {color: #999999;}#id_1663378852178_218 .fill-vertical {flex: 1 1 auto; display: flex; flex-direction: column;}#id_1663378852178_218 .fill-vertical textarea {flex: 1 1 auto; width: 100%; height: 150px; padding: 12px 20px; box-sizing: border-box; border: 2px solid #ccc; border-radius: 3px; background-color: #f8f8f8; font-size: 16px; resize: none;}#id_1663378852178_218 {border-radius: 3px; display: flex; flex-direction: column; justify-content: space-between; height: 100%;}</style>
 
 </div></div></div></section><footer data-silex-type="container-element" class="container-element editable-style silex-id-1541607078776-1 section-element prevent-resizable" data-silex-id="silex-id-1541607078776-1"><div data-silex-type="container-element" class="editable-style silex-id-1541607078769-0 container-element silex-element-content website-width" data-silex-id="silex-id-1541607078769-0"><div data-silex-id="silex-id-1432759239473-23" data-silex-type="text-element" class="editable-style text-element silex-id-1432759239473-23 text-style-2 centered-text">
             <div class="silex-element-content normal">
