--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div><div class="editable-style container-element silex-id-1432759238054-9 pic button">
 
 
-                <a class="editable-style container-element fancybox silex-id-1432759237951-8" title="The caption is set in the &quot;title and tooltip&quot; property in Silex" href="assets/20220908_114326%20(1).jpg">
+                <a class="editable-style container-element fancybox silex-id-1432759237951-8" title="The caption is set in the &quot;title and tooltip&quot; property in Silex" href="assets/longneck.jpg">
                 </a>
 
                 <div class="editable-style text-element full-width silex-id-1432759237849-7">
@@ -183,7 +183,7 @@
             <div class="silex-element-content normal">
                 <h2>Get In Touch<br></h2>
             </div>
-        </div><div class="editable-style silex-id-1541607116447-4 html-element silex-component silex-component-form silex-use-height-not-minheight"><div class="silex-element-content"><form id="id_1663376689995_419" action="https://formspree.io/your@email.com" method="POST">
+        </div><div class="editable-style silex-id-1541607116447-4 html-element silex-component silex-component-form silex-use-height-not-minheight"><div class="silex-element-content"><form id="id_1663378852178_218" action="https://formspree.io/your@email.com" method="POST">
   
   <div>
     <label for="field1">Name</label>
